--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,12 @@
   <inceptionYear>2019</inceptionYear>
 
   <properties>
-    <iotcrawler.core.version>1.0.0</iotcrawler.core.version>
-    <fiware.models.version>1.0.0</fiware.models.version>
+<!--    <iotcrawler.orchestrator.version>1.0.7</iotcrawler.orchestrator.version>-->
+    <iotcrawler.core.version>1.0.2</iotcrawler.core.version>
+    <fiware.models.version>1.0.1</fiware.models.version>
+    <fiware.clients.version>1.0.1</fiware.clients.version>
     <ngsi.api.version>7.1-SNAPSHOT</ngsi.api.version>
-    <iotcrawler.orchestrator.version>1.0.7</iotcrawler.orchestrator.version>
-    <fiware.clients.version>1.0.8</fiware.clients.version>
+
     <junit.version>4.11</junit.version>
     <slf4j.version>1.7.15</slf4j.version>
   </properties>
@@ -55,30 +56,34 @@
       </exclusions>
     </dependency>
 
-<!--    <dependency>-->
-<!--      <groupId>com.agtinternational.iotcrawler</groupId>-->
-<!--      <artifactId>fiware-clients</artifactId>-->
-<!--      <version>${fiware.clients.version}</version>-->
-<!--      <exclusions>-->
-<!--        <exclusion>-->
-<!--          <groupId>com.agtinternational.iotcrawler</groupId>-->
-<!--          <artifactId>fiware-models</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>com.agtinternational.iotcrawler</groupId>-->
-<!--          <artifactId>core</artifactId>-->
-<!--        </exclusion>-->
-<!--        &lt;!&ndash;<exclusion>&ndash;&gt;-->
-<!--        &lt;!&ndash;<groupId>org.apache.httpcomponents</groupId>&ndash;&gt;-->
-<!--        &lt;!&ndash;<artifactId>httpclient-osgi</artifactId>&ndash;&gt;-->
-<!--        &lt;!&ndash;</exclusion>&ndash;&gt;-->
-<!--        &lt;!&ndash;<exclusion>&ndash;&gt;-->
-<!--        &lt;!&ndash;<groupId>org.apache.httpcomponents</groupId>&ndash;&gt;-->
-<!--        &lt;!&ndash;<artifactId>httpasyncclient</artifactId>&ndash;&gt;-->
-<!--        &lt;!&ndash;</exclusion>&ndash;&gt;-->
-<!--      </exclusions>-->
-<!--      &lt;!&ndash;<scope>provided</scope>&ndash;&gt;-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>com.agtinternational.iotcrawler</groupId>
+      <artifactId>fiware-clients</artifactId>
+      <version>${fiware.clients.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.agtinternational.iotcrawler</groupId>
+          <artifactId>fiware-models</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.agtinternational.iotcrawler</groupId>
+          <artifactId>core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>eu.neclab.iotplatform</groupId>
+          <artifactId>iotbroker.client</artifactId>
+        </exclusion>
+        <!--<exclusion>-->
+        <!--<groupId>org.apache.httpcomponents</groupId>-->
+        <!--<artifactId>httpclient-osgi</artifactId>-->
+        <!--</exclusion>-->
+        <!--<exclusion>-->
+        <!--<groupId>org.apache.httpcomponents</groupId>-->
+        <!--<artifactId>httpasyncclient</artifactId>-->
+        <!--</exclusion>-->
+      </exclusions>
+      <scope>test</scope>
+    </dependency>
 
     <!--<dependency>-->
       <!--<groupId>com.agtinternational.iotcrawler</groupId>-->
@@ -140,58 +145,68 @@
       <version>4.0.0</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-      <version>5.2.1.RELEASE</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.springframework</groupId>-->
+<!--      <artifactId>spring-core</artifactId>-->
+<!--      <version>4.1.6.RELEASE</version>-->
+<!--    </dependency>-->
 
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+<!--    <dependency>-->
+<!--      <groupId>org.springframework</groupId>-->
+<!--      <artifactId>spring-web</artifactId>-->
+<!--      <version>5.2.1.RELEASE</version>-->
+<!--    </dependency>-->
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>5.2.1.RELEASE</version>
+      <version>4.1.6.RELEASE</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-      <version>2.2.1.RELEASE</version>
-      <exclusions>
-
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.boot</groupId>-->
+<!--      <artifactId>spring-boot-starter-web</artifactId>-->
+<!--      <version>2.2.1.RELEASE</version>-->
+<!--      <exclusions>-->
 <!--        <exclusion>-->
-<!--          <groupId>ch.qos.logback</groupId>-->
-<!--          <artifactId>logback-classic</artifactId>-->
+<!--          <groupId>org.springframework</groupId>-->
+<!--          <artifactId>spring-webmvc</artifactId>-->
 <!--        </exclusion>-->
-      </exclusions>
-      <!--<scope>test</scope>-->
-    </dependency>
+
+<!--&lt;!&ndash;        <exclusion>&ndash;&gt;-->
+<!--&lt;!&ndash;          <groupId>ch.qos.logback</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;          <artifactId>logback-classic</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;        </exclusion>&ndash;&gt;-->
+<!--      </exclusions>-->
+<!--      &lt;!&ndash;<scope>test</scope>&ndash;&gt;-->
+<!--    </dependency>-->
 
 
-    <dependency>
-      <groupId>eu.neclab.iotplatform</groupId>
-      <artifactId>ngsi.api</artifactId>
-      <version>7.1-SNAPSHOT</version>
-      <!--            <scope>provided</scope>-->
-      <exclusions>
-        <exclusion>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>*</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>net.minidev</groupId>
-          <artifactId>asm</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.springframework</groupId>
-          <artifactId>*</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.ops4j.pax.logging</groupId>
-          <artifactId>*</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>eu.neclab.iotplatform</groupId>-->
+<!--      <artifactId>ngsi.api</artifactId>-->
+<!--      <version>7.1-SNAPSHOT</version>-->
+<!--      &lt;!&ndash;            <scope>provided</scope>&ndash;&gt;-->
+<!--      <exclusions>-->
+<!--        <exclusion>-->
+<!--          <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--          <artifactId>*</artifactId>-->
+<!--        </exclusion>-->
+<!--        <exclusion>-->
+<!--          <groupId>net.minidev</groupId>-->
+<!--          <artifactId>asm</artifactId>-->
+<!--        </exclusion>-->
+<!--        <exclusion>-->
+<!--          <groupId>org.springframework</groupId>-->
+<!--          <artifactId>*</artifactId>-->
+<!--        </exclusion>-->
+<!--        <exclusion>-->
+<!--          <groupId>org.ops4j.pax.logging</groupId>-->
+<!--          <artifactId>*</artifactId>-->
+<!--        </exclusion>-->
+<!--      </exclusions>-->
+<!--    </dependency>-->
 
 
 
@@ -220,11 +235,15 @@
       <scope>provided</scope>
     </dependency>
 
-    <dependency>
-      <groupId>org.mongodb</groupId>
-      <artifactId>mongodb-driver</artifactId>
-      <version>3.4.2</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.mongodb</groupId>-->
+<!--      <artifactId>mongodb-driver</artifactId>-->
+<!--      <version>3.4.2</version>-->
+<!--    </dependency>-->
+
+
+
+
 
     <dependency>
       <groupId>io.leangen.graphql</groupId>
