--- a/pom.xml
+++ b/pom.xml
@@ -158,29 +158,37 @@
 <!--      <version>5.2.1.RELEASE</version>-->
 <!--    </dependency>-->
 
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>4.2.0.RELEASE</version>
+    </dependency>
+
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>4.1.6.RELEASE</version>
+      <version>4.2.0.RELEASE</version>
     </dependency>
 
-<!--    <dependency>-->
-<!--      <groupId>org.springframework.boot</groupId>-->
-<!--      <artifactId>spring-boot-starter-web</artifactId>-->
-<!--      <version>2.2.1.RELEASE</version>-->
-<!--      <exclusions>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>spring-webmvc</artifactId>-->
-<!--        </exclusion>-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>2.2.1.RELEASE</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-webmvc</artifactId>
+        </exclusion>
 
-<!--&lt;!&ndash;        <exclusion>&ndash;&gt;-->
-<!--&lt;!&ndash;          <groupId>ch.qos.logback</groupId>&ndash;&gt;-->
-<!--&lt;!&ndash;          <artifactId>logback-classic</artifactId>&ndash;&gt;-->
-<!--&lt;!&ndash;        </exclusion>&ndash;&gt;-->
-<!--      </exclusions>-->
-<!--      &lt;!&ndash;<scope>test</scope>&ndash;&gt;-->
-<!--    </dependency>-->
+<!--        <exclusion>-->
+<!--          <groupId>ch.qos.logback</groupId>-->
+<!--          <artifactId>logback-classic</artifactId>-->
+<!--        </exclusion>-->
+      </exclusions>
+      <!--<scope>test</scope>-->
+    </dependency>
 
 
 <!--    <dependency>-->
