--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,10 @@
           <groupId>org.ops4j.pax.logging</groupId>
           <artifactId>*</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>eu.neclab.iotplatform</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
 
@@ -60,29 +64,6 @@
       <groupId>com.agtinternational.iotcrawler</groupId>
       <artifactId>fiware-clients</artifactId>
       <version>${fiware.clients.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>com.agtinternational.iotcrawler</groupId>
-          <artifactId>fiware-models</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.agtinternational.iotcrawler</groupId>
-          <artifactId>core</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>eu.neclab.iotplatform</groupId>
-          <artifactId>iotbroker.client</artifactId>
-        </exclusion>
-        <!--<exclusion>-->
-        <!--<groupId>org.apache.httpcomponents</groupId>-->
-        <!--<artifactId>httpclient-osgi</artifactId>-->
-        <!--</exclusion>-->
-        <!--<exclusion>-->
-        <!--<groupId>org.apache.httpcomponents</groupId>-->
-        <!--<artifactId>httpasyncclient</artifactId>-->
-        <!--</exclusion>-->
-      </exclusions>
-      <scope>test</scope>
     </dependency>
 
     <!--<dependency>-->
@@ -145,49 +126,37 @@
       <version>4.0.0</version>
     </dependency>
 
-<!--    <dependency>-->
-<!--      <groupId>org.springframework</groupId>-->
-<!--      <artifactId>spring-core</artifactId>-->
-<!--      <version>4.1.6.RELEASE</version>-->
-<!--    </dependency>-->
-
-    <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
-<!--    <dependency>-->
-<!--      <groupId>org.springframework</groupId>-->
-<!--      <artifactId>spring-web</artifactId>-->
-<!--      <version>5.2.1.RELEASE</version>-->
-<!--    </dependency>-->
-
-    <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-      <version>4.2.0.RELEASE</version>
+      <artifactId>spring-core</artifactId>
+<!--      <version>4.2.0.RELEASE</version>-->
+      <version>5.2.1.RELEASE</version>
     </dependency>
-
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>4.2.0.RELEASE</version>
+<!--      <version>4.2.0.RELEASE</version>-->
+      <version>5.2.1.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+<!--      <version>4.2.0.RELEASE</version>-->
+      <version>5.2.1.RELEASE</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
       <version>2.2.1.RELEASE</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-webmvc</artifactId>
-        </exclusion>
-
+<!--      <exclusions>-->
 <!--        <exclusion>-->
-<!--          <groupId>ch.qos.logback</groupId>-->
-<!--          <artifactId>logback-classic</artifactId>-->
+<!--          <groupId>org.springframework</groupId>-->
+<!--          <artifactId>spring-webmvc</artifactId>-->
 <!--        </exclusion>-->
-      </exclusions>
-      <!--<scope>test</scope>-->
+<!--      </exclusions>-->
     </dependency>
 
 
