--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,12 @@
 <!--        </exclusion>-->
 <!--      </exclusions>-->
     </dependency>
-
+<!--    <dependency>-->
+<!--      <groupId>com.orange.fiware</groupId>-->
+<!--      <artifactId>ngsi-client</artifactId>-->
+<!--      <version>0.1.3</version>-->
+<!--      <scope>compile</scope>-->
+<!--    </dependency>-->
 
 <!--    <dependency>-->
 <!--      <groupId>eu.neclab.iotplatform</groupId>-->
