--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.agtinternational.iotcrawler</groupId>
-  <artifactId>graphql-enabler</artifactId>
+  <artifactId>search-enabler</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
 
@@ -18,6 +18,9 @@
     <fiware.models.version>1.0.1</fiware.models.version>
     <fiware.clients.version>1.0.1</fiware.clients.version>
     <ngsi.api.version>7.1-SNAPSHOT</ngsi.api.version>
+
+<!--    <git.branch></git.branch>-->
+<!--    <git.commit.id></git.commit.id>-->
 
     <junit.version>4.11</junit.version>
     <slf4j.version>1.7.15</slf4j.version>
@@ -264,9 +267,30 @@
 
 
   <build>
-
+    <finalName>${git.branch}:${git.commit.id}</finalName>
+    <testSourceDirectory>src/test/java</testSourceDirectory>
 
     <plugins>
+      <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <version>4.0.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>revision</goal>
+            </goals>
+            <!-- *NOTE*: The default phase of revision is initialize, but
+              in case you want to change it, you can do so by adding the phase here -->
+            <phase>package</phase>
+            <configuration>
+              <generateGitPropertiesFile>false</generateGitPropertiesFile>
+              <injectAllReactorProjects>true</injectAllReactorProjects>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
@@ -290,6 +314,47 @@
         <target>1.8</target>
       </configuration>
     </plugin>
+
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <version>2.0.0</version>
+        <configuration>
+          <from>
+            <image>java</image>
+          </from>
+          <to>
+            <!--<image>localhost:5000/${project.name}:${project.version}</image>-->
+            <image>gitlab.iotcrawler.net:4567/${project.name}/${project.name}/${build.finalName}</image>
+            <!--                        <image>gitlab.iotcrawler.net:4567/${project.name}/${project.name}/master</image>-->
+            <auth>
+              <!--<username></username>-->
+              <!--<password></password>-->
+            </auth>
+            <!-- optional: create a tag based on the git commit id (via the git-commit-id plugin): -->
+            <!--                        <tags>-->
+            <!--                            <tag>${git.commit.id}</tag>-->
+            <!--                        </tags>-->
+          </to>
+          <!--                    <extraDirectories>-->
+          <!--                        <paths>${agent-extraction-root}</paths>-->
+          <!--                    </extraDirectories>-->
+          <container>
+            <jvmFlags>
+              <jvmFlag>-server</jvmFlag>
+            </jvmFlags>
+          </container>
+        </configuration>
+        <executions>
+          <execution>
+            <id>build-and-push-docker-image</id>
+            <phase>deploy</phase>
+            <goals>
+              <goal>build</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
