--- a/chart/templates/seach-enabler-deployment.yaml
+++ b/chart/templates/seach-enabler-deployment.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
-    io.kompose.service: search-enabler
-  name: search-enabler
+    io.kompose.service: search_enabler
+  name: search_enabler
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: search-enabler
+      io.kompose.service: search_enabler
   strategy: {}
   template:
     metadata:
@@ -21,7 +21,7 @@ spec:
         kompose.version: 1.21.0 (992df58d8)
       creationTimestamp: null
       labels:
-        io.kompose.service: search-enabler
+        io.kompose.service: search_enabler
     spec:
       imagePullSecrets:
 {{ toYaml .Values.image.secrets | indent 10 }}
