--- a/chart/templates/seach-enabler-service.yaml
+++ b/chart/templates/seach-enabler-service.yaml
@@ -6,7 +6,7 @@ metadata:
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
-    io.kompose.service: search_enabler
+    io.kompose.service: search-enabler
   name: orchestrator
 spec:
   ports:
@@ -14,6 +14,6 @@ spec:
     port: 80
     targetPort: 8080
   selector:
-    io.kompose.service: search_enabler
+    io.kompose.service: search-enabler
 status:
   loadBalancer: {}
