Changes in deployment script

--- a/chart/templates/seach-enabler-deployment.yaml
+++ b/chart/templates/seach-enabler-deployment.yaml
@@ -30,7 +30,7 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: "{{ .Values.image.pullPolicy }}"
         ports:
-          - name: "80"
+          - name: "port80"
             containerPort: 8080
 
         env:
