--- a/chart/templates/seach-enabler-service.yaml
+++ b/chart/templates/seach-enabler-service.yaml
@@ -7,7 +7,7 @@ metadata:
   creationTimestamp: null
   labels:
     io.kompose.service: search-enabler
-  name: orchestrator
+  name: search-enabler
 spec:
   ports:
   - name: "80"
