--- a/pom.xml
+++ b/pom.xml
@@ -268,7 +268,7 @@
 
   <build>
     <finalName>${git.branch}:${git.commit.id}</finalName>
-    <testSourceDirectory>src/test/java</testSourceDirectory>
+<!--    <testSourceDirectory>src/test/java</testSourceDirectory>-->
 
     <plugins>
       <plugin>
