Changes in deploy script

--- a/deploy.yml
+++ b/deploy.yml
@@ -77,6 +77,7 @@ staging:
     - kubectl config set-credentials gitlab --token="${USER_TOKEN}"
     - kubectl config set-context default --cluster=k8s --user=gitlab
     - kubectl config use-context default
+    - echo "kubectl delete --all deployment --namespace ${KUBE_NAMESPACE}"
     - kubectl delete --all deployment --namespace ${KUBE_NAMESPACE} || echo ""
     - kubectl delete --all service --namespace ${KUBE_NAMESPACE} || echo ""
 
