Changes in deploy script/server

--- a/deploy.yml
+++ b/deploy.yml
@@ -92,9 +92,9 @@ staging:
     - auto-deploy delete
     - auto-deploy create_secret
     - auto-deploy deploy || echo "deployment should be done. Error ignored"
-  environment:
-    name: $CI_PROJECT_PATH_SLUG-staging
-    url: http://$CI_PROJECT_PATH_SLUG-staging.$KUBE_INGRESS_BASE_DOMAIN
+  #environment:
+  #  name: $CI_PROJECT_PATH_SLUG-staging
+  #  url: http://$CI_PROJECT_PATH_SLUG-staging.$KUBE_INGRESS_BASE_DOMAIN
   only:
 #    refs:
 #      - master
