Changes in deploy script/server

--- a/deploy.yml
+++ b/deploy.yml
@@ -84,6 +84,7 @@ staging:
 
     #- sed -i "s#helm upgrade --install#helm upgrade --install --force#g" /usr/local/bin/auto-deploy
     #- cat /usr/local/bin/auto-deploy
+    - echo "CI_PROJECT_PATH_SLUG $CI_PROJECT_PATH_SLUG"
     - auto-deploy check_kube_domain
     - auto-deploy download_chart
     - auto-deploy ensure_namespace
@@ -92,9 +93,9 @@ staging:
     - auto-deploy delete
     - auto-deploy create_secret
     - auto-deploy deploy || echo "deployment should be done. Error ignored"
-  #environment:
-  #  name: $CI_PROJECT_PATH_SLUG-staging
-  #  url: http://$CI_PROJECT_PATH_SLUG-staging.$KUBE_INGRESS_BASE_DOMAIN
+  environment:
+    name: search-enabler-staging
+    url: http://$CI_PROJECT_PATH_SLUG-staging.$KUBE_INGRESS_BASE_DOMAIN
   only:
 #    refs:
 #      - master
