--- a/chart/templates/seach-enabler-deployment.yaml
+++ b/chart/templates/seach-enabler-deployment.yaml
@@ -12,7 +12,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: search-enabler-{{ .Values.gitlab.env }}-service
+      io.kompose.service: search-enabler-{{ .Values.gitlab.env }}
   strategy: {}
   template:
     metadata:
@@ -21,7 +21,7 @@ spec:
         kompose.version: 1.21.0 (992df58d8)
       creationTimestamp: null
       labels:
-        io.kompose.service: search-enabler-{{ .Values.gitlab.env }}-service
+        io.kompose.service: search-enabler-{{ .Values.gitlab.env }}
     spec:
       imagePullSecrets:
 {{ toYaml .Values.image.secrets | indent 10 }}
