Changes in deploy script/server

--- a/deploy.yml
+++ b/deploy.yml
@@ -95,7 +95,7 @@ staging:
     - auto-deploy create_secret
     - auto-deploy deploy
   environment:
-    name: search-enabler-staging
+    name: staging
     url: http://$CI_PROJECT_PATH_SLUG-staging.$KUBE_INGRESS_BASE_DOMAIN
   only:
 #    refs:
