--- a/chart/templates/seach-enabler-service.yaml
+++ b/chart/templates/seach-enabler-service.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
-    io.kompose.service: {{ .Values.gitlab.env }}
-  name: {{ .Values.gitlab.env }}
+    io.kompose.service: search-enabler
+  name: search-enabler
 spec:
   ports:
-  - port: 80
+  - port: 8080
     targetPort: 8080
   selector:
-    io.kompose.service: {{ .Values.gitlab.env }}
+    io.kompose.service: search-enabler
 status:
   loadBalancer: {}
