changes in deployment script

--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: search-enabler-ingress
 spec:
   rules:
-    - host: {{.Values.service.url}}
+    - host: {{ .Values.gitlab.env }}
       http:
         paths:
           - path: "/"
