--- a/deploy.yml
+++ b/deploy.yml
@@ -84,7 +84,7 @@ staging:
 
     #- sed -i "s#helm upgrade --install#helm upgrade --install --force#g" /usr/local/bin/auto-deploy
     #- cat /usr/local/bin/auto-deploy
-    - echo $CI_ENVIRONMENT_URL
+    - echo
     - auto-deploy check_kube_domain
     - auto-deploy download_chart
     - auto-deploy ensure_namespace
