changes in deployment script

--- a/deploy.yml
+++ b/deploy.yml
@@ -93,7 +93,7 @@ staging:
     - auto-deploy delete
     - auto-deploy create_secret
     - auto-deploy deploy
-    - echo ${CI_ENVIRONMENT_URL}
+    - echo http://$CI_PROJECT_PATH_SLUG.$KUBE_INGRESS_BASE_DOMAIN
   environment:
     name: ${CI_PROJECT_NAME}-${CI_BUILD_STAGE}
     url: http://$CI_PROJECT_PATH_SLUG-${CI_BUILD_STAGE}.$KUBE_INGRESS_BASE_DOMAIN
