--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ stages:
   - deploy  # dummy stage to follow the template guidelines
   - review
   - dast
-  - staging
+  #- staging
   - canary
   - production
   - incremental rollout 10%
