--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,7 @@ stages:
   - review
   - dast
   - canary
+  - staging
   - production
   - incremental rollout 10%
   - incremental rollout 25%
@@ -42,7 +43,7 @@ stages:
   - incremental rollout 100%
   - performance
   - cleanup
-#  - staging
+
 
 #build:
 #  stage: build
