HomeActivity schema & types added

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
       <!--</exclusions>-->
     <!--</dependency>-->
 
+<!--    <dependency>-->
+<!--      <groupId>com.zhokhov.graphql</groupId>-->
+<!--      <artifactId>graphql-datetime-spring-boot-starter</artifactId>-->
+<!--      <version>1.9.0</version>-->
+<!--    </dependency>-->
+
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-graphql-java</artifactId>
